components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef int ADSHANDLE;
typedef int *PADSHANDLE;
typedef double *PDOUBLE;
typedef Word *PWord;
typedef short *PSIGNED16;
typedef int *PSIGNED32;
typedef __int64 *PSIGNED64;
typedef unsigned UNSIGNED32;
typedef unsigned *PUNSIGNED32;
typedef char * *pPChar;
extern "C" unsigned __stdcall AdsGetExact22(int hObj, PWord pbExact);
extern "C" unsigned __stdcall AdsGetField(int hTable, char * pucFldName, char * pucBuf, PUNSIGNED32 pulLen, Word usOption);
extern "C" unsigned __stdcall AdsGetFieldDecimals(int hTable, char * pucFldName, PWord pusDecimals);
extern "C" unsigned __stdcall AdsGetFieldLength(int hTable, char * pucFldName, PUNSIGNED32 pulLength);
extern "C" unsigned __stdcall AdsGetFieldName(int hTable, Word usFld, char * pucName, PWord pusBufLen);
extern "C" unsigned __stdcall AdsGetFieldNum(int hTable, char * pucFldName, PWord pusNum);
extern "C" unsigned __stdcall AdsGetFieldOffset(int hTable, char * pucFldName, PUNSIGNED32 pulOffset);
extern "C" unsigned __stdcall AdsGetFieldType(int hTable, char * pucFldName, PWord pusType);
extern "C" unsigned __stdcall AdsGetFilter(int hTable, char * pucFilter, PWord pusLen);
extern "C" unsigned __stdcall AdsGetHandleLong(int hObj, PUNSIGNED32 pulVal);
extern "C" unsigned __stdcall AdsGetHandleType(int hObj, PWord pusType);
extern "C" unsigned __stdcall AdsGetIndexCondition(int hIndex, char * pucExpr, PWord pusLen);
extern "C" unsigned __stdcall AdsGetIndexExpr(int hIndex, char * pucExpr, PWord pusLen);
extern "C" unsigned __stdcall AdsGetIndexFilename(int hIndex, Word usOption, char * pucName, PWord pusLen);
extern "C" unsigned __stdcall AdsGetIndexHandle(int hTable, char * pucIndexOrder, PADSHANDLE phIndex);
extern "C" unsigned __stdcall AdsGetIndexHandleByExpr(int hTable, char * pucExpr, unsigned ulDescending, PADSHANDLE phIndex);
extern "C" unsigned __stdcall AdsGetIndexHandleByOrder(int hTable, Word usIndexOrder, PADSHANDLE phIndex);
extern "C" unsigned __stdcall AdsGetIndexName(int hIndex, char * pucName, PWord pusLen);
extern "C" unsigned __stdcall AdsGetIndexOrderByHandle(int hIndex, PWord pusIndexOrder);
extern "C" unsigned __stdcall AdsGetFTSIndexInfo(int hIndex, char * pucOutput, PUNSIGNED32 pulBufLen, pPChar ppucField, PUNSIGNED32 pulMinWordLen, PUNSIGNED32 pulMaxWordLen, pPChar ppucDelimiters, pPChar ppucNoiseWords, pPChar ppucDropChars, pPChar ppucConditionalChars, pPChar ppucReserved1, pPChar ppucReserved2, PUNSIGNED32 pulOptions);
extern "C" unsigned __stdcall AdsGetJulian(int hTable, char * pucFldName, PSIGNED32 plDate);
extern "C" unsigned __stdcall AdsGetKeyColumn(int hCursor, char * pucKeyColumn, PWord pusLen);
extern "C" unsigned __stdcall AdsGetKeyCount(int hIndex, Word usFilterOption, PUNSIGNED32 pulCount);
extern "C" unsigned __stdcall AdsGetKeyLength(int hIndex, PWord pusKeyLength);
extern "C" unsigned __stdcall AdsGetKeyNum(int hIndex, Word usFilterOption, PUNSIGNED32 pulKey);
extern "C" unsigned __stdcall AdsGetKeyType(int hIndex, PWord pusKeyType);
extern "C" unsigned __stdcall AdsGetLastError(PUNSIGNED32 pulErrCode, char * pucBuf, PWord pusBufLen);
extern "C" unsigned __stdcall AdsGetLastTableUpdate(int hTable, char * pucDate, PWord pusDateLen);
extern "C" unsigned __stdcall AdsGetLogical(int hTable, char * pucFldName, PWord pbValue);
extern "C" unsigned __stdcall AdsGetLong(int hTable, char * pucFldName, PSIGNED32 plValue);
extern "C" unsigned __stdcall AdsGetLongLong(int hTable, char * pucFldName, PSIGNED64 pqValue);
extern "C" unsigned __stdcall AdsGetMemoBlockSize(int hTable, PWord pusBlockSize);
extern "C" unsigned __stdcall AdsGetMemoDataType(int hTable, char * pucFldName, PWord pusType);
extern "C" unsigned __stdcall AdsGetMemoLength(int hTable, char * pucFldName, PUNSIGNED32 pulLength);
extern "C" unsigned __stdcall AdsGetMilliseconds(int hTable, char * pucFldName, PSIGNED32 plTime);
extern "C" unsigned __stdcall AdsGetMoney(int hTable, char * pucFldName, PSIGNED64 pqValue);
extern "C" unsigned __stdcall AdsGetNumFields(int hTable, PWord pusCount);
extern "C" unsigned __stdcall AdsGetNumIndexes(int hTable, PWord pusNum);
extern "C" unsigned __stdcall AdsGetNumFTSIndexes(int hTable, PWord pusNum);
extern "C" unsigned __stdcall AdsGetNumLocks(int hTable, PWord pusNum);
extern "C" unsigned __stdcall AdsGetNumOpenTables(PWord pusNum);
extern "C" unsigned __stdcall AdsGetRecord(int hTable, char * pucRec, PUNSIGNED32 pulLen);
extern "C" unsigned __stdcall AdsGetRecordCount(int hTable, Word usFilterOption, PUNSIGNED32 pulCount);
extern "C" unsigned __stdcall AdsGetRecordLength(int hTable, PUNSIGNED32 pulLength);
extern "C" unsigned __stdcall AdsGetRecordCRC(int hTable, PUNSIGNED32 pulCRC, unsigned ulOptions);
extern "C" unsigned __stdcall AdsGetRecordNum(int hTable, Word usFilterOption, PUNSIGNED32 pulRec);
extern "C" unsigned __stdcall AdsGetRelKeyPos(int hIndex, PDOUBLE pdPos);
extern "C" unsigned __stdcall AdsGetScope(int hIndex, Word usScopeOption, char * pucScope, PWord pusBufLen);
extern "C" unsigned __stdcall AdsGetSearchPath(char * pucPath, PWord pusLen);
extern "C" unsigned __stdcall AdsGetServerName(int hConnect, char * pucName, PWord pusLen);
extern "C" unsigned __stdcall AdsGetServerTime(int hConnect, char * pucDateBuf, PWord pusDateBufLen, PSIGNED32 plTime, char * pucTimeBuf, PWord pusTimeBufLen);
extern "C" unsigned __stdcall AdsGetShort(int hTable, char * pucFldName, PSIGNED16 psValue);