components/ads_8.1/ace.pas


   function AdsGetExact22( hObj: ADSHANDLE;
                           pbExact: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetField( hTable: ADSHANDLE;
                         pucFldName: PAceChar;
                         pucBuf: PAceChar;
                         pulLen: pUNSIGNED32;
                         usOption: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFieldDecimals( hTable: ADSHANDLE;
                                 pucFldName: PAceChar;
                                 pusDecimals: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFieldLength( hTable: ADSHANDLE;
                               pucFldName: PAceChar;
                               pulLength: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFieldName( hTable: ADSHANDLE;
                             usFld: Word;
                             pucName: PAceChar;
                             pusBufLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFieldNum( hTable: ADSHANDLE;
                            pucFldName: PAceChar;
                            pusNum: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFieldOffset( hTable: ADSHANDLE;
                               pucFldName: PAceChar;
                               pulOffset: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFieldType( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             pusType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFilter( hTable: ADSHANDLE;
                          pucFilter: PAceChar;
                          pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetHandleLong( hObj: ADSHANDLE;
                              pulVal: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetHandleType( hObj: ADSHANDLE;
                              pusType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexCondition( hIndex: ADSHANDLE;
                                  pucExpr: PAceChar;
                                  pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexExpr( hIndex: ADSHANDLE;
                             pucExpr: PAceChar;
                             pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexFilename( hIndex: ADSHANDLE;
                                 usOption: Word;
                                 pucName: PAceChar;
                                 pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexHandle( hTable: ADSHANDLE;
                               pucIndexOrder: PAceChar;
                               phIndex: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexHandleByExpr( hTable : ADSHANDLE;
                                     pucExpr : PAceChar;
                                     ulDescending : UNSIGNED32;
                                     phIndex: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexHandleByOrder( hTable: ADSHANDLE;
                                      usIndexOrder: Word;
                                      phIndex: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexName( hIndex: ADSHANDLE;
                             pucName: PAceChar;
                             pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetIndexOrderByHandle( hIndex: ADSHANDLE;
                                      pusIndexOrder: pWord): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFTSIndexInfo( hIndex: ADSHANDLE;
                                pucOutput : PAceChar;
                                pulBufLen: pUNSIGNED32;
                                ppucField: pPChar;
                                pulMinWordLen: pUNSIGNED32;
                                pulMaxWordLen: pUNSIGNED32;
                                ppucDelimiters: pPChar;
                                ppucNoiseWords: pPChar;
                                ppucDropChars: pPChar;
                                ppucConditionalChars: pPChar;
                                ppucReserved1: pPChar;
                                ppucReserved2: pPChar;
                                pulOptions: pUNSIGNED32): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetJulian( hTable: ADSHANDLE;
                          pucFldName: PAceChar;
                          plDate: pSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetKeyColumn( hCursor: ADSHANDLE;
                             pucKeyColumn: PAceChar;
                             pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetKeyCount( hIndex: ADSHANDLE;
                            usFilterOption: Word;
                            pulCount: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetKeyNum( hIndex: ADSHANDLE;
                          usFilterOption: Word;
                          pulKey: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetKeyLength( hIndex: ADSHANDLE;
                             pusKeyLength: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetKeyType( hIndex: ADSHANDLE;
                           pusKeyType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetLastError( pulErrCode: pUNSIGNED32;
                             pucBuf: PAceChar;
                             pusBufLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetLastTableUpdate( hTable: ADSHANDLE;
                                   pucDate: PAceChar;
                                   pusDateLen: pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetLogical( hTable: ADSHANDLE;
                           pucFldName: PAceChar;
                           pbValue: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetLong( hTable: ADSHANDLE;
                        pucFldName: PAceChar;
                        plValue: pSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI5_OR_NEWER}
   function AdsGetLongLong( hTable: ADSHANDLE;
                            pucFldName: PAceChar;
                            pqValue: pSIGNED64 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

   function AdsGetMemoBlockSize( hTable: ADSHANDLE;
                                 pusBlockSize:  pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetMemoDataType( hTable: ADSHANDLE;
                                pucFldName: PAceChar;
                                pusType:  pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetMemoLength( hTable: ADSHANDLE;
                              pucFldName: PAceChar;
                              pulLength: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetMilliseconds( hTable: ADSHANDLE;
                                pucFldName: PAceChar;
                                plTime: pSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$IFDEF ADSDELPHI5_OR_NEWER}
   function AdsGetMoney( hTable: ADSHANDLE;
                         pucFldName: PAceChar;
                         pqValue: pSIGNED64 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

   function AdsGetNumFields( hTable: ADSHANDLE;
                             pusCount: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetNumIndexes( hTable: ADSHANDLE;
                              pusNum: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetNumFTSIndexes( hTable: ADSHANDLE;
                                 pusNum: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetNumLocks( hTable: ADSHANDLE;
                            pusNum: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetNumOpenTables( pusNum: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetRecord( hTable: ADSHANDLE;
                          pucRec: PAceChar;
                          pulLen: pUNSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetRecordCount( hTable: ADSHANDLE;
                               usFilterOption: Word;
                               pulCount: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetRecordNum( hTable: ADSHANDLE;
                             usFilterOption: Word;
                             pulRec: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetRecordLength( hTable: ADSHANDLE;
                                pulLength: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetRecordCRC( hTable: ADSHANDLE;
                             pulCRC: pUNSIGNED32;
                             ulOptions: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetRelKeyPos( hIndex: ADSHANDLE;
                             pdPos: pDOUBLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetScope( hIndex: ADSHANDLE;
                         usScopeOption: Word;
                         pucScope: PAceChar;
                         pusBufLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetSearchPath( pucPath: PAceChar;
                              pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetServerName( hConnect: ADSHANDLE;
                              pucName: PAceChar;
                              pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetServerTime( hConnect: ADSHANDLE;
                              pucDateBuf: PAceChar;
                              pusDateBufLen: pWord;
                              plTime: pSIGNED32;
                              pucTimeBuf: PAceChar;
                              pusTimeBufLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetShort( hTable: ADSHANDLE;
                         pucFldName: PAceChar;
                         psValue: pSIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
